resources/razdslnvp2/WebContent/parser/Nvp2Parser.js
// $ANTLR 3.3 avr. 19, 2016 01:13:22 /Users/raz/eclipse-workspace/razdslnvp2/WebContent/parser/Nvp2.g 2019-10-20 21:57:24



/**
 * @Generated
 */
var Nvp2Parser = function(input, state) {
    if (!state) {
        state = new org.antlr.runtime.RecognizerSharedState();
    }

    (function(){
    }).call(this);

    Nvp2Parser.superclass.constructor.call(this, input, state);


         

    /* @todo only create adaptor if output=AST */
    this.adaptor = new org.antlr.runtime.tree.CommonTreeAdaptor();

};

org.antlr.lang.augmentObject(Nvp2Parser, {
    EOF: -1,
    T__12: 12,
    T__13: 13,
    T__14: 14,
    T__15: 15,
    T__16: 16,
    T__17: 17,
    T__18: 18,
    T__19: 19,
    T__20: 20,
    T__21: 21,
    T__22: 22,
    T__23: 23,
    T__24: 24,
    T__25: 25,
    T__26: 26,
    T__27: 27,
    T__28: 28,
    T__29: 29,
    T__30: 30,
    T__31: 31,
    T__32: 32,
    T__33: 33,
    T__34: 34,
    T__35: 35,
    T__36: 36,
    T__37: 37,
    T__38: 38,
    T__39: 39,
    T__40: 40,
    T__41: 41,
    T__42: 42,
    T__43: 43,
    T__44: 44,
    T__45: 45,
    T__46: 46,
    T__47: 47,
    T__48: 48,
    T__49: 49,
    T__50: 50,
    T__51: 51,
    T__52: 52,
    T__53: 53,
    T__54: 54,
    T__55: 55,
    T__56: 56,
    T__57: 57,
    T__58: 58,
    T__59: 59,
    T__60: 60,
    T__61: 61,
    T__62: 62,
    T__63: 63,
    T__64: 64,
    T__65: 65,
    T__66: 66,
    T__67: 67,
    T__68: 68,
    TEXT: 4,
    NEWLINE: 5,
    ID: 6,
    ARROW: 7,
    STRING: 8,
    INT: 9,
    COMMENT: 10,
    WS: 11
});

(function(){
// public class variables
var EOF= -1,
    T__12= 12,
    T__13= 13,
    T__14= 14,
    T__15= 15,
    T__16= 16,
    T__17= 17,
    T__18= 18,
    T__19= 19,
    T__20= 20,
    T__21= 21,
    T__22= 22,
    T__23= 23,
    T__24= 24,
    T__25= 25,
    T__26= 26,
    T__27= 27,
    T__28= 28,
    T__29= 29,
    T__30= 30,
    T__31= 31,
    T__32= 32,
    T__33= 33,
    T__34= 34,
    T__35= 35,
    T__36= 36,
    T__37= 37,
    T__38= 38,
    T__39= 39,
    T__40= 40,
    T__41= 41,
    T__42= 42,
    T__43= 43,
    T__44= 44,
    T__45= 45,
    T__46= 46,
    T__47= 47,
    T__48= 48,
    T__49= 49,
    T__50= 50,
    T__51= 51,
    T__52= 52,
    T__53= 53,
    T__54= 54,
    T__55= 55,
    T__56= 56,
    T__57= 57,
    T__58= 58,
    T__59= 59,
    T__60= 60,
    T__61= 61,
    T__62= 62,
    T__63= 63,
    T__64= 64,
    T__65= 65,
    T__66= 66,
    T__67= 67,
    T__68= 68,
    TEXT= 4,
    NEWLINE= 5,
    ID= 6,
    ARROW= 7,
    STRING= 8,
    INT= 9,
    COMMENT= 10,
    WS= 11;

// public instance methods/vars
org.antlr.lang.extend(Nvp2Parser, org.antlr.runtime.Parser, {
        
    setTreeAdaptor: function(adaptor) {
        this.adaptor = adaptor;
    },
    getTreeAdaptor: function() {
        return this.adaptor;
    },

    getTokenNames: function() { return Nvp2Parser.tokenNames; },
    getGrammarFileName: function() { return "/Users/raz/eclipse-workspace/razdslnvp2/WebContent/parser/Nvp2.g"; }
});
org.antlr.lang.augmentObject(Nvp2Parser.prototype, {

    // inline static return class
    rule_Nvp2_return: (function() {
        Nvp2Parser.rule_Nvp2_return = function(){};
        org.antlr.lang.extend(Nvp2Parser.rule_Nvp2_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // /Users/raz/eclipse-workspace/razdslnvp2/WebContent/parser/Nvp2.g:19:1: rule_Nvp2 : (elements+= rule_AbstractElement )* EOF ;
    // $ANTLR start "rule_Nvp2"
    rule_Nvp2: function() {
        var retval = new Nvp2Parser.rule_Nvp2_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

        var EOF1 = null;
        var list_elements=null;
        var elements = null;
        var EOF1_tree=null;

        try {
            // /Users/raz/eclipse-workspace/razdslnvp2/WebContent/parser/Nvp2.g:19:10: ( (elements+= rule_AbstractElement )* EOF )
            // /Users/raz/eclipse-workspace/razdslnvp2/WebContent/parser/Nvp2.g:20:5: (elements+= rule_AbstractElement )* EOF
            root_0 = this.adaptor.nil();

            // /Users/raz/eclipse-workspace/razdslnvp2/WebContent/parser/Nvp2.g:20:13: (elements+= rule_AbstractElement )*
            loop1:
            do {
                var alt1=2;
                var LA1_0 = this.input.LA(1);

                if ( (LA1_0==TEXT||LA1_0==12||(LA1_0>=15 && LA1_0<=18)||LA1_0==20||(LA1_0>=22 && LA1_0<=25)||(LA1_0>=30 && LA1_0<=31)||(LA1_0>=34 && LA1_0<=35)||LA1_0==38||LA1_0==51||LA1_0==53) ) {
                    alt1=1;
                }


                switch (alt1) {
                case 1 :
                    // /Users/raz/eclipse-workspace/razdslnvp2/WebContent/parser/Nvp2.g:20:13: elements+= rule_AbstractElement
                    this.pushFollow(Nvp2Parser.FOLLOW_rule_AbstractElement_in_rule_Nvp262);
                    elements=this.rule_AbstractElement();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, elements.getTree());
                    if (org.antlr.lang.isNull(list_elements)) list_elements = [];
                    list_elements.push(elements.getTree());



                    break;

                default :
                    break loop1;
                }
            } while (true);

            EOF1=this.match(this.input,EOF,Nvp2Parser.FOLLOW_EOF_in_rule_Nvp265); 



            retval.stop = this.input.LT(-1);

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (re) {
            if (re instanceof org.antlr.runtime.RecognitionException) {
                this.reportError(re);
                this.recover(this.input,re);
                retval.tree = this.adaptor.errorNode(this.input, retval.start, this.input.LT(-1), re);
            } else {
                throw re;
            }
        }
        finally {
        }
        return retval;
    },

    // inline static return class
    rule_AbstractElement_return: (function() {
        Nvp2Parser.rule_AbstractElement_return = function(){};
        org.antlr.lang.extend(Nvp2Parser.rule_AbstractElement_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // /Users/raz/eclipse-workspace/razdslnvp2/WebContent/parser/Nvp2.g:22:1: rule_AbstractElement : ( rule_Expect | rule_Msg | rule_Match | rule_When | rule_Receive | rule_Flow | rule_Option | rule_Val | rule_Mock | rule_Topic | rule_Anno | rule_Object | rule_Class | rule_Assoc | rule_Def | rule_Assert | rule_Braq | TEXT );
    // $ANTLR start "rule_AbstractElement"
    rule_AbstractElement: function() {
        var retval = new Nvp2Parser.rule_AbstractElement_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

        var TEXT19 = null;
         var rule_Expect2 = null;
         var rule_Msg3 = null;
         var rule_Match4 = null;
         var rule_When5 = null;
         var rule_Receive6 = null;
         var rule_Flow7 = null;
         var rule_Option8 = null;
         var rule_Val9 = null;
         var rule_Mock10 = null;
         var rule_Topic11 = null;
         var rule_Anno12 = null;
         var rule_Object13 = null;
         var rule_Class14 = null;
         var rule_Assoc15 = null;
         var rule_Def16 = null;
         var rule_Assert17 = null;
         var rule_Braq18 = null;

        var TEXT19_tree=null;

        try {
            // /Users/raz/eclipse-workspace/razdslnvp2/WebContent/parser/Nvp2.g:22:21: ( rule_Expect | rule_Msg | rule_Match | rule_When | rule_Receive | rule_Flow | rule_Option | rule_Val | rule_Mock | rule_Topic | rule_Anno | rule_Object | rule_Class | rule_Assoc | rule_Def | rule_Assert | rule_Braq | TEXT )
            var alt2=18;
            switch ( this.input.LA(1) ) {
            case 22:
                alt2=1;
                break;
            case 15:
                alt2=2;
                break;
            case 17:
                alt2=3;
                break;
            case 16:
                alt2=4;
                break;
            case 12:
                alt2=5;
                break;
            case 20:
                alt2=6;
                break;
            case 24:
                alt2=7;
                break;
            case 23:
                alt2=8;
                break;
            case 18:
                alt2=9;
                break;
            case 51:
                alt2=10;
                break;
            case 34:
                alt2=11;
                break;
            case 30:
                alt2=12;
                break;
            case 25:
                alt2=13;
                break;
            case 35:
                alt2=14;
                break;
            case 31:
                alt2=15;
                break;
            case 38:
                alt2=16;
                break;
            case 53:
                alt2=17;
                break;
            case TEXT:
                alt2=18;
                break;
            default:
                var nvae =
                    new org.antlr.runtime.NoViableAltException("", 2, 0, this.input);

                throw nvae;
            }

            switch (alt2) {
                case 1 :
                    // /Users/raz/eclipse-workspace/razdslnvp2/WebContent/parser/Nvp2.g:23:5: rule_Expect
                    root_0 = this.adaptor.nil();

                    this.pushFollow(Nvp2Parser.FOLLOW_rule_Expect_in_rule_AbstractElement77);
                    rule_Expect2=this.rule_Expect();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, rule_Expect2.getTree());


                    break;
                case 2 :
                    // /Users/raz/eclipse-workspace/razdslnvp2/WebContent/parser/Nvp2.g:23:19: rule_Msg
                    root_0 = this.adaptor.nil();

                    this.pushFollow(Nvp2Parser.FOLLOW_rule_Msg_in_rule_AbstractElement81);
                    rule_Msg3=this.rule_Msg();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, rule_Msg3.getTree());


                    break;
                case 3 :
                    // /Users/raz/eclipse-workspace/razdslnvp2/WebContent/parser/Nvp2.g:23:30: rule_Match
                    root_0 = this.adaptor.nil();

                    this.pushFollow(Nvp2Parser.FOLLOW_rule_Match_in_rule_AbstractElement85);
                    rule_Match4=this.rule_Match();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, rule_Match4.getTree());


                    break;
                case 4 :
                    // /Users/raz/eclipse-workspace/razdslnvp2/WebContent/parser/Nvp2.g:23:43: rule_When
                    root_0 = this.adaptor.nil();

                    this.pushFollow(Nvp2Parser.FOLLOW_rule_When_in_rule_AbstractElement89);
                    rule_When5=this.rule_When();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, rule_When5.getTree());


                    break;
                case 5 :
                    // /Users/raz/eclipse-workspace/razdslnvp2/WebContent/parser/Nvp2.g:23:55: rule_Receive
                    root_0 = this.adaptor.nil();

                    this.pushFollow(Nvp2Parser.FOLLOW_rule_Receive_in_rule_AbstractElement93);
                    rule_Receive6=this.rule_Receive();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, rule_Receive6.getTree());


                    break;
                case 6 :
                    // /Users/raz/eclipse-workspace/razdslnvp2/WebContent/parser/Nvp2.g:24:5: rule_Flow
                    root_0 = this.adaptor.nil();

                    this.pushFollow(Nvp2Parser.FOLLOW_rule_Flow_in_rule_AbstractElement102);
                    rule_Flow7=this.rule_Flow();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, rule_Flow7.getTree());


                    break;
                case 7 :
                    // /Users/raz/eclipse-workspace/razdslnvp2/WebContent/parser/Nvp2.g:24:17: rule_Option
                    root_0 = this.adaptor.nil();

                    this.pushFollow(Nvp2Parser.FOLLOW_rule_Option_in_rule_AbstractElement106);
                    rule_Option8=this.rule_Option();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, rule_Option8.getTree());


                    break;
                case 8 :
                    // /Users/raz/eclipse-workspace/razdslnvp2/WebContent/parser/Nvp2.g:24:31: rule_Val
                    root_0 = this.adaptor.nil();

                    this.pushFollow(Nvp2Parser.FOLLOW_rule_Val_in_rule_AbstractElement110);
                    rule_Val9=this.rule_Val();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, rule_Val9.getTree());


                    break;
                case 9 :
                    // /Users/raz/eclipse-workspace/razdslnvp2/WebContent/parser/Nvp2.g:24:42: rule_Mock
                    root_0 = this.adaptor.nil();

                    this.pushFollow(Nvp2Parser.FOLLOW_rule_Mock_in_rule_AbstractElement114);
                    rule_Mock10=this.rule_Mock();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, rule_Mock10.getTree());


                    break;
                case 10 :
                    // /Users/raz/eclipse-workspace/razdslnvp2/WebContent/parser/Nvp2.g:24:54: rule_Topic
                    root_0 = this.adaptor.nil();

                    this.pushFollow(Nvp2Parser.FOLLOW_rule_Topic_in_rule_AbstractElement118);
                    rule_Topic11=this.rule_Topic();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, rule_Topic11.getTree());


                    break;
                case 11 :
                    // /Users/raz/eclipse-workspace/razdslnvp2/WebContent/parser/Nvp2.g:25:5: rule_Anno
                    root_0 = this.adaptor.nil();

                    this.pushFollow(Nvp2Parser.FOLLOW_rule_Anno_in_rule_AbstractElement127);
                    rule_Anno12=this.rule_Anno();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, rule_Anno12.getTree());


                    break;
                case 12 :
                    // /Users/raz/eclipse-workspace/razdslnvp2/WebContent/parser/Nvp2.g:25:18: rule_Object
                    root_0 = this.adaptor.nil();

                    this.pushFollow(Nvp2Parser.FOLLOW_rule_Object_in_rule_AbstractElement132);
                    rule_Object13=this.rule_Object();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, rule_Object13.getTree());


                    break;
                case 13 :
                    // /Users/raz/eclipse-workspace/razdslnvp2/WebContent/parser/Nvp2.g:25:32: rule_Class
                    root_0 = this.adaptor.nil();

                    this.pushFollow(Nvp2Parser.FOLLOW_rule_Class_in_rule_AbstractElement136);
                    rule_Class14=this.rule_Class();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, rule_Class14.getTree());


                    break;
                case 14 :
                    // /Users/raz/eclipse-workspace/razdslnvp2/WebContent/parser/Nvp2.g:25:45: rule_Assoc
                    root_0 = this.adaptor.nil();

                    this.pushFollow(Nvp2Parser.FOLLOW_rule_Assoc_in_rule_AbstractElement140);
                    rule_Assoc15=this.rule_Assoc();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, rule_Assoc15.getTree());


                    break;
                case 15 :
                    // /Users/raz/eclipse-workspace/razdslnvp2/WebContent/parser/Nvp2.g:25:58: rule_Def
                    root_0 = this.adaptor.nil();

                    this.pushFollow(Nvp2Parser.FOLLOW_rule_Def_in_rule_AbstractElement144);
                    rule_Def16=this.rule_Def();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, rule_Def16.getTree());


                    break;
                case 16 :
                    // /Users/raz/eclipse-workspace/razdslnvp2/WebContent/parser/Nvp2.g:26:5: rule_Assert
                    root_0 = this.adaptor.nil();

                    this.pushFollow(Nvp2Parser.FOLLOW_rule_Assert_in_rule_AbstractElement152);
                    rule_Assert17=this.rule_Assert();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, rule_Assert17.getTree());


                    break;
                case 17 :
                    // /Users/raz/eclipse-workspace/razdslnvp2/WebContent/parser/Nvp2.g:27:5: rule_Braq
                    root_0 = this.adaptor.nil();

                    this.pushFollow(Nvp2Parser.FOLLOW_rule_Braq_in_rule_AbstractElement160);
                    rule_Braq18=this.rule_Braq();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, rule_Braq18.getTree());


                    break;
                case 18 :
                    // /Users/raz/eclipse-workspace/razdslnvp2/WebContent/parser/Nvp2.g:27:17: TEXT
                    root_0 = this.adaptor.nil();

                    TEXT19=this.match(this.input,TEXT,Nvp2Parser.FOLLOW_TEXT_in_rule_AbstractElement164); 
                    TEXT19_tree = this.adaptor.create(TEXT19);
                    this.adaptor.addChild(root_0, TEXT19_tree);



                    break;

            }
            retval.stop = this.input.LT(-1);

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (re) {
            if (re instanceof org.antlr.runtime.RecognitionException) {
                this.reportError(re);
                this.recover(this.input,re);
                retval.tree = this.adaptor.errorNode(this.input, retval.start, this.input.LT(-1), re);
            } else {
                throw re;
            }
        }
        finally {
        }
        return retval;
    },

    // inline static return class
    rule_Receive_return: (function() {
        Nvp2Parser.rule_Receive_return = function(){};
        org.antlr.lang.extend(Nvp2Parser.rule_Receive_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // /Users/raz/eclipse-workspace/razdslnvp2/WebContent/parser/Nvp2.g:32:1: rule_Receive : '$send' ( '<' stype= rule_MsgStereo '>' )? name= rule_QualifiedName (attrs= rule_AttrSpecs )? NEWLINE ;
    // $ANTLR start "rule_Receive"
    rule_Receive: function() {
        var retval = new Nvp2Parser.rule_Receive_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

        var string_literal20 = null;
        var char_literal21 = null;
        var char_literal22 = null;
        var NEWLINE23 = null;
         var stype = null;
         var name = null;
         var attrs = null;

        var string_literal20_tree=null;
        var char_literal21_tree=null;
        var char_literal22_tree=null;
        var NEWLINE23_tree=null;

        try {
            // /Users/raz/eclipse-workspace/razdslnvp2/WebContent/parser/Nvp2.g:32:13: ( '$send' ( '<' stype= rule_MsgStereo '>' )? name= rule_QualifiedName (attrs= rule_AttrSpecs )? NEWLINE )
            // /Users/raz/eclipse-workspace/razdslnvp2/WebContent/parser/Nvp2.g:33:5: '$send' ( '<' stype= rule_MsgStereo '>' )? name= rule_QualifiedName (attrs= rule_AttrSpecs )? NEWLINE
            root_0 = this.adaptor.nil();

            string_literal20=this.match(this.input,12,Nvp2Parser.FOLLOW_12_in_rule_Receive178); 
            string_literal20_tree = this.adaptor.create(string_literal20);
            this.adaptor.addChild(root_0, string_literal20_tree);

            // /Users/raz/eclipse-workspace/razdslnvp2/WebContent/parser/Nvp2.g:33:13: ( '<' stype= rule_MsgStereo '>' )?
            var alt3=2;
            var LA3_0 = this.input.LA(1);

            if ( (LA3_0==13) ) {
                alt3=1;
            }
            switch (alt3) {
                case 1 :
                    // /Users/raz/eclipse-workspace/razdslnvp2/WebContent/parser/Nvp2.g:33:14: '<' stype= rule_MsgStereo '>'
                    char_literal21=this.match(this.input,13,Nvp2Parser.FOLLOW_13_in_rule_Receive181); 
                    char_literal21_tree = this.adaptor.create(char_literal21);
                    this.adaptor.addChild(root_0, char_literal21_tree);

                    this.pushFollow(Nvp2Parser.FOLLOW_rule_MsgStereo_in_rule_Receive185);
                    stype=this.rule_MsgStereo();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, stype.getTree());
                    char_literal22=this.match(this.input,14,Nvp2Parser.FOLLOW_14_in_rule_Receive187); 
                    char_literal22_tree = this.adaptor.create(char_literal22);
                    this.adaptor.addChild(root_0, char_literal22_tree);



                    break;

            }

            this.pushFollow(Nvp2Parser.FOLLOW_rule_QualifiedName_in_rule_Receive193);
            name=this.rule_QualifiedName();

            this.state._fsp--;

            this.adaptor.addChild(root_0, name.getTree());
            // /Users/raz/eclipse-workspace/razdslnvp2/WebContent/parser/Nvp2.g:33:74: (attrs= rule_AttrSpecs )?
            var alt4=2;
            var LA4_0 = this.input.LA(1);

            if ( (LA4_0==40) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // /Users/raz/eclipse-workspace/razdslnvp2/WebContent/parser/Nvp2.g:33:74: attrs= rule_AttrSpecs
                    this.pushFollow(Nvp2Parser.FOLLOW_rule_AttrSpecs_in_rule_Receive197);
                    attrs=this.rule_AttrSpecs();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, attrs.getTree());


                    break;

            }

            NEWLINE23=this.match(this.input,NEWLINE,Nvp2Parser.FOLLOW_NEWLINE_in_rule_Receive200); 
            NEWLINE23_tree = this.adaptor.create(NEWLINE23);
            this.adaptor.addChild(root_0, NEWLINE23_tree);




            retval.stop = this.input.LT(-1);

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (re) {
            if (re instanceof org.antlr.runtime.RecognitionException) {
                this.reportError(re);
                this.recover(this.input,re);
                retval.tree = this.adaptor.errorNode(this.input, retval.start, this.input.LT(-1), re);
            } else {
                throw re;
            }
        }
        finally {
        }
        return retval;
    },

    // inline static return class
    rule_Msg_return: (function() {
        Nvp2Parser.rule_Msg_return = function(){};
        org.antlr.lang.extend(Nvp2Parser.rule_Msg_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // /Users/raz/eclipse-workspace/razdslnvp2/WebContent/parser/Nvp2.g:36:1: rule_Msg : '$msg' ( '<' stype= rule_MsgStereo '>' )? name= rule_QualifiedName (attrs= rule_AttrSpecs )? NEWLINE ;
    // $ANTLR start "rule_Msg"
    rule_Msg: function() {
        var retval = new Nvp2Parser.rule_Msg_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

        var string_literal24 = null;
        var char_literal25 = null;
        var char_literal26 = null;
        var NEWLINE27 = null;
         var stype = null;
         var name = null;
         var attrs = null;

        var string_literal24_tree=null;
        var char_literal25_tree=null;
        var char_literal26_tree=null;
        var NEWLINE27_tree=null;

        try {
            // /Users/raz/eclipse-workspace/razdslnvp2/WebContent/parser/Nvp2.g:36:9: ( '$msg' ( '<' stype= rule_MsgStereo '>' )? name= rule_QualifiedName (attrs= rule_AttrSpecs )? NEWLINE )
            // /Users/raz/eclipse-workspace/razdslnvp2/WebContent/parser/Nvp2.g:37:5: '$msg' ( '<' stype= rule_MsgStereo '>' )? name= rule_QualifiedName (attrs= rule_AttrSpecs )? NEWLINE
            root_0 = this.adaptor.nil();

            string_literal24=this.match(this.input,15,Nvp2Parser.FOLLOW_15_in_rule_Msg212); 
            string_literal24_tree = this.adaptor.create(string_literal24);
            this.adaptor.addChild(root_0, string_literal24_tree);

            // /Users/raz/eclipse-workspace/razdslnvp2/WebContent/parser/Nvp2.g:37:12: ( '<' stype= rule_MsgStereo '>' )?
            var alt5=2;
            var LA5_0 = this.input.LA(1);

            if ( (LA5_0==13) ) {
                alt5=1;
            }
            switch (alt5) {
                case 1 :
                    // /Users/raz/eclipse-workspace/razdslnvp2/WebContent/parser/Nvp2.g:37:13: '<' stype= rule_MsgStereo '>'
                    char_literal25=this.match(this.input,13,Nvp2Parser.FOLLOW_13_in_rule_Msg215); 
                    char_literal25_tree = this.adaptor.create(char_literal25);
                    this.adaptor.addChild(root_0, char_literal25_tree);

                    this.pushFollow(Nvp2Parser.FOLLOW_rule_MsgStereo_in_rule_Msg219);
                    stype=this.rule_MsgStereo();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, stype.getTree());
                    char_literal26=this.match(this.input,14,Nvp2Parser.FOLLOW_14_in_rule_Msg221); 
                    char_literal26_tree = this.adaptor.create(char_literal26);
                    this.adaptor.addChild(root_0, char_literal26_tree);



                    break;

            }

            this.pushFollow(Nvp2Parser.FOLLOW_rule_QualifiedName_in_rule_Msg227);
            name=this.rule_QualifiedName();

            this.state._fsp--;

            this.adaptor.addChild(root_0, name.getTree());
            // /Users/raz/eclipse-workspace/razdslnvp2/WebContent/parser/Nvp2.g:37:73: (attrs= rule_AttrSpecs )?
            var alt6=2;
            var LA6_0 = this.input.LA(1);

            if ( (LA6_0==40) ) {
                alt6=1;
            }
            switch (alt6) {
                case 1 :
                    // /Users/raz/eclipse-workspace/razdslnvp2/WebContent/parser/Nvp2.g:37:73: attrs= rule_AttrSpecs
                    this.pushFollow(Nvp2Parser.FOLLOW_rule_AttrSpecs_in_rule_Msg231);
                    attrs=this.rule_AttrSpecs();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, attrs.getTree());


                    break;

            }

            NEWLINE27=this.match(this.input,NEWLINE,Nvp2Parser.FOLLOW_NEWLINE_in_rule_Msg234); 
            NEWLINE27_tree = this.adaptor.create(NEWLINE27);
            this.adaptor.addChild(root_0, NEWLINE27_tree);




            retval.stop = this.input.LT(-1);
